# kaadugal

./: .gitignore  README  README.md
examples/: CMakeLists.txt
examples/classify/: AAFeatureResponse2D.hpp  HistogramStats.hpp  PointSet2D.hpp  classify.cpp
examples/classify/config/: classify_2d.train
examples/config/: classify_2d.train  regress_2d.train
examples/data/: Generate2DRegressData.m  Generate2DStructData.m
examples/mergetrees/: mergetrees.cpp
examples/regression/: AAFeatureResponse2D.hpp  GaussianStats.hpp  PointSet2DRegress.hpp  regression.cpp
examples/structpredict/: StructDataStats.hpp  StructPointSet2D.hpp  structpredict.cpp
include/: AbstractDataSet.hpp  AbstractFeatureResponse.hpp  AbstractStatistics.hpp  DataSetIndex.hpp  DecisionForest.hpp  DecisionForestBuilder.hpp  DecisionNode.hpp  DecisionTree.hpp  DecisionTreeBuilder.hpp  Kaadugal.hpp  KaadugalDefines.hpp  Parameters.hpp  Randomizer.hpp  Utilities.hpp
include/Abstract/: AbstractDataSet.hpp  AbstractFeatureResponse.hpp  AbstractLeafData.hpp  AbstractStatistics.hpp
util/: CMakeLists.txt
